[global]
quiet = 1

[metadata]
name = ganexp
description = GAN Experiments Toolkits
author = stwind
version = 0.1.0
url = https://github.com/stwind/gan-experiments
keywords = pytorch
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =

setup_requires = pytest-runner; wheel
tests_require =
    pytest

[aliases]
test = pytest
release = clean --all bdist_wheel

[tool:pytest]
addopts = --verbose -s -p no:warnings
testpaths = tests